[gd_scene load_steps=15 format=3 uid="uid://mpk3neuhmd42"]

[ext_resource type="Script" uid="uid://vw4hdme7gttq" path="res://main.gd" id="1_ig7tw"]
[ext_resource type="PackedScene" uid="uid://bybush3bov5mf" path="res://game.tscn" id="2_0xm2m"]
[ext_resource type="PackedScene" uid="uid://bkmbqdv0u23hu" path="res://ui/menu/main_menu.tscn" id="3_h2yge"]
[ext_resource type="Script" uid="uid://d1iimci1dyikk" path="res://audio/audio_manager.gd" id="4_272bh"]
[ext_resource type="AudioStream" uid="uid://d3iyxenjkexp7" path="res://ui/hud/type.ogg" id="5_5vw27"]
[ext_resource type="Script" uid="uid://d36vkvhl014cj" path="res://audio/audio_randomizer.gd" id="6_kek77"]
[ext_resource type="AudioStream" uid="uid://tmw0covrej6x" path="res://hook/fire_hook.ogg" id="7_4c57u"]
[ext_resource type="AudioStream" uid="uid://bbnesm60vkcpb" path="res://audio/play.ogg" id="8_5vw27"]
[ext_resource type="AudioStream" uid="uid://yjrh58ee2wuv" path="res://audio/distress_signal.ogg" id="9_dg77c"]
[ext_resource type="AudioStream" uid="uid://bahhh25qv43lg" path="res://audio/finish_task.ogg" id="9_kek77"]
[ext_resource type="AudioStream" uid="uid://pf3jt6x0mk5v" path="res://audio/click.ogg" id="10_4c57u"]
[ext_resource type="AudioStream" uid="uid://by7smgmp0aw3i" path="res://object/fan/wind_whoosh.ogg" id="11_efxa6"]
[ext_resource type="AudioStream" uid="uid://gu8qghokq73t" path="res://audio/thud_wall.ogg" id="12_w48qg"]
[ext_resource type="AudioStream" uid="uid://d4fjt28gd6sgl" path="res://audio/window_thud.ogg" id="13_vivmo"]

[node name="Main" type="Node3D" node_paths=PackedStringArray("audio")]
script = ExtResource("1_ig7tw")
game_scene = ExtResource("2_0xm2m")
main_menu_scene = ExtResource("3_h2yge")
audio = NodePath("AudioManager")

[node name="AudioManager" type="Node3D" parent="."]
process_mode = 3
script = ExtResource("4_272bh")

[node name="MissionTyping" type="AudioStreamPlayer" parent="AudioManager"]
unique_name_in_owner = true
stream = ExtResource("5_5vw27")
volume_db = -12.0
bus = &"UI"

[node name="FireHook" type="AudioStreamPlayer" parent="AudioManager"]
unique_name_in_owner = true
volume_db = -12.0
bus = &"Environment"
script = ExtResource("6_kek77")
audio_tracks = Array[AudioStream]([ExtResource("7_4c57u")])
min_pitch = 0.8000000000029104
max_pitch = 1.1999999999970896
metadata/_custom_type_script = "uid://d36vkvhl014cj"

[node name="ClickPlay" type="AudioStreamPlayer" parent="AudioManager"]
unique_name_in_owner = true
stream = ExtResource("8_5vw27")
volume_db = -10.0
bus = &"UI"

[node name="WinButton" type="AudioStreamPlayer" parent="AudioManager"]
unique_name_in_owner = true
stream = ExtResource("9_dg77c")
volume_db = -5.0
bus = &"Environment"

[node name="FinishTask" type="AudioStreamPlayer" parent="AudioManager"]
unique_name_in_owner = true
stream = ExtResource("9_kek77")
volume_db = -15.0
bus = &"UI"
script = ExtResource("6_kek77")
audio_tracks = Array[AudioStream]([ExtResource("9_kek77")])
min_pitch = 0.8000000000029104
max_pitch = 1.1999999999970896
metadata/_custom_type_script = "uid://d36vkvhl014cj"

[node name="Click" type="AudioStreamPlayer" parent="AudioManager"]
unique_name_in_owner = true
volume_db = -15.0
bus = &"UI"
script = ExtResource("6_kek77")
audio_tracks = Array[AudioStream]([ExtResource("10_4c57u")])
min_pitch = 0.9499999999970896
max_pitch = 1.0500000000029104
metadata/_custom_type_script = "uid://d36vkvhl014cj"

[node name="NormalThud" type="AudioStreamPlayer" parent="AudioManager"]
unique_name_in_owner = true
stream = ExtResource("12_w48qg")
volume_db = 10.0
bus = &"Environment"
script = ExtResource("6_kek77")
audio_tracks = Array[AudioStream]([ExtResource("12_w48qg")])
metadata/_custom_type_script = "uid://d36vkvhl014cj"

[node name="WindowThud" type="AudioStreamPlayer" parent="AudioManager"]
unique_name_in_owner = true
stream = ExtResource("13_vivmo")
bus = &"Environment"
script = ExtResource("6_kek77")
audio_tracks = Array[AudioStream]([ExtResource("13_vivmo")])
metadata/_custom_type_script = "uid://d36vkvhl014cj"

[node name="FanWhoosh" type="AudioStreamPlayer" parent="AudioManager"]
unique_name_in_owner = true
stream = ExtResource("11_efxa6")
bus = &"Environment"
script = ExtResource("6_kek77")
audio_tracks = Array[AudioStream]([ExtResource("11_efxa6")])
min_pitch = 0.9499999999970896
max_pitch = 1.0500000000029104
metadata/_custom_type_script = "uid://d36vkvhl014cj"
